--- a/common.sv.po
+++ b/common.sv.po
@@ -239,7 +239,7 @@ msgstr "Spelare %d"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:202
 msgid "Standard quick menu"
-msgstr ""
+msgstr "Standardsnabbmeny"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:634
 #: qcsrc/client/hud/panel/quickmenu.qc:636
@@ -506,19 +506,19 @@ msgstr "Slumpa lagen"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:896
 msgid "Server quick menu"
-msgstr ""
+msgstr "Serversnabbmeny"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:898
 msgid "Waypoint editor menu"
-msgstr ""
+msgstr "Meny för vägpunktsredigerare"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:901
 msgid "Waypoint editor menu as default"
-msgstr ""
+msgstr "Meny för vägpunktsredigerare som standard"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:903
 msgid "Server quick menu as default"
-msgstr ""
+msgstr "Serversnabbmeny som standard"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:909
 msgid "QMCMD^Spectate a player"
@@ -7445,6 +7445,10 @@ msgid ""
 "seconds to find some or if they fail to do so, face death. The secondary "
 "fire mode does not inflict any damage but is good for doing trickjumps."
 msgstr ""
+"Spelarna kommer at bara ges ett vapen som kommer att omedelbart döda "
+"motståndaren med ett enda skott. Om spelaren får slut på ammunition har de "
+"10 sekunder att hitta mer, annars dör dem. Sekundäreld gör ingen skada men "
+"är bra för att göra trickhopp."
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:247
 msgid ""
